# panoptikon

./: .dockerignore  .env.example  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  app.py  benchmark.py  docker-compose.yml  docker-compose.yml.example  dotsocr.py  example.docker-compose.yml  inferio-start.bat  inferio-start.sh  install-amd.sh  install-cpu.bat  install-nvidia.bat  install.sh  pyproject.toml  requirements.txt  run.py  run_flask.py  run_ui.py  scan.py  scan_tags.py  start-rust.bat  start-rust.sh  start.bat  start.sh  style.css  ui.py
gateway/: AGENTS.md  Cargo.toml  README.md  openapi.json
gateway/migrations/index/: 20250117193000_init.sql
gateway/migrations/storage/: 20250117193000_init.sql
gateway/migrations/user_data/: 20250117193000_init.sql  20260710120000_pinboards.sql
gateway/src/: api_error.rs  config.rs  env_template.rs  inferio_client.rs  local_api.rs  logging.rs  main.rs  openapi.rs  policy.rs  process_tree.rs  proxy.rs  shutdown.rs  test_utils.rs  ui.rs
gateway/src/api/: bookmarks.rs  db.rs  db_params.rs  items.rs  jobs.rs  mod.rs  open.rs  openapi.rs  pinboards.rs  search.rs  utils.rs
gateway/src/db/: bookmarks.rs  connection.rs  extraction_log.rs  extraction_write.rs  file_scans.rs  files.rs  folders.rs  index_writer.rs  info.rs  items.rs  migrations.rs  mod.rs  pinboards.rs  pql.rs  storage.rs  system_config.rs  tags.rs
gateway/src/inferio/: dispatch.rs  http.rs  manager.rs  mod.rs  prewarm.rs  registry.rs  worker.rs
gateway/src/jobs/: continuous_scan.rs  cron.rs  dir_poller.rs  extraction.rs  files.rs  inference_pool.rs  mod.rs  queue.rs  timing.rs
gateway/src/pql/: builder.rs  embedding_utils.rs  mod.rs  model.rs  preprocess.rs  utils.rs
gateway/tests/fixtures/npy/: be_f32_1d.npy  f16_2d_c.npy  f32_1d.npy  f64_1d.npy
panoptikon/: AGENTS.md  Cargo.toml  README.md  build.rs  files.py  folders.py  launch.py  log.py  openapi.json  utils.py
panoptikon-config/: Cargo.toml
panoptikon-config/src/: lib.rs
panoptikon-desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.dev.conf.json
panoptikon-desktop/src-tauri/capabilities/: control.json  relay_mapping.json  relay_pairing.json  setup.json  update.json
panoptikon-desktop/src-tauri/icons/: README.md  icon.icns
panoptikon-desktop/src-tauri/permissions/: choose_scan_folders.toml  control_commands.toml  open_panoptikon_page.toml  relay_mapping_commands.toml  relay_pairing_commands.toml  update_commands.toml
panoptikon-desktop/src-tauri/src/: host_env.rs  host_open.rs  lib.rs  lifecycle.rs  main.rs  paths.rs  relay.rs  server_config.rs  settings.rs  supervisor.rs  updates.rs
panoptikon/api/: app.py  job.py
panoptikon/data_extractors/: models.py
panoptikon/data_extractors/ai/: clip_model_list.py
panoptikon/data_extractors/data_handlers/: tags.py
panoptikon/data_extractors/extraction_jobs/: __init__.py  extraction_job.py  ocr.py  text_embeddings.py
panoptikon/db/: __init__.py  bookmarks.py  folders.py  setters.py  storage.py  tags.py
panoptikon/db/rules/: build_filters.py  min_max_filter.py  processed_extracted_data_filter.py  processed_items_filter.py  rules.py  serializer.py
panoptikon/db/search/: __init__.py  inner_query.py  search_query.py  utils.py
panoptikon/db/search/clauses/: any_text.py  bookmarks.py  image_embed.py
panoptikon/inference/: manager.py  model.py  utils.py
panoptikon/inference/client/: __init__.py  api_client.py
panoptikon/inference/impl/: clip.py  sentence_transformers.py
panoptikon/migrations/index/: 20260720130000_vector_quants.sql  20260721090000_item_data_setter_counts.sql  20260721120000_item_data_placeholder_setter_type.sql  20260721140000_embedding_quants_profile_rev.sql
panoptikon/migrations/storage/: 20250117193000_init.sql
panoptikon/migrations/user_data/: 20260719120000_pinboard_flags.sql
panoptikon/src/: accelerator_env.rs  config.rs  desktop.rs  env_template.rs  host_paths.rs  inferio_client.rs  logging.rs  main.rs  media_tools.rs  openapi.rs  policy.rs  policy_token.rs  process_tree.rs  proxy.rs  resources.rs  rocm_env.rs  setup.rs  shutdown.rs  test_utils.rs  ui.rs  update.rs
panoptikon/src/api/: bookmarks.rs  client_config.rs  db.rs  desktop.rs  items.rs  jobs.rs  mod.rs  open.rs  pinboards.rs  relay.rs  search.rs  search_cache.rs
panoptikon/src/db/: bookmarks.rs  connection.rs  epochs.rs  extraction_log.rs  extraction_write.rs  file_scans.rs  files.rs  folders.rs  index_writer.rs  info.rs  items.rs  migrations.rs  mod.rs  pinboards.rs  pql.rs  setup.rs  sql_functions.rs  system_config.rs  tags.rs  vector_quants.rs
panoptikon/src/inferio/: http.rs  manager.rs  prewarm.rs  registry.rs  worker.rs
panoptikon/src/jobs/: continuous_scan.rs  cron.rs  extraction.rs  files.rs  inference_pool.rs  mod.rs  queue.rs  vector_quants.rs
panoptikon/src/pql/: builder.rs  embedding_utils.rs  explain_plan.rs  mod.rs  model.rs  preprocess.rs  utils.rs
panoptikon/tests/fixtures/npy/: f16_2d_f.npy  i16_1d.npy  u16_1d.npy  u8_1d.npy
panoptikon/ui/: root_readonly.py  scan.py
panoptikon/ui/components/: bookmark_folder_selector.py  extractor_ui.py  utils.py
panoptikon/ui/components/search/: __init__.py  base.py  bookmarks.py  tags.py  vector.py
panoptikon/ui/test_models/: fasterw.py  ocr_doctr.py  tagging.py  whisper.py
python/: pyproject.toml
python/inferio/: __init__.py  model.py
python/inferio/config/: inference.toml
python/inferio/impl/: clap.py  danbooru.py  dotsocr.py  eocr.py  florence2.py  jina_clip.py  md_captioner.py  md_tagger.py  ocr.py  qwen3_vl.py  sentence_transformers.py  whisper.py
python/inferio/impl/saucenao/: __init__.py  containers.py  params.py  saucenao_api.py
python/inferio_worker/: __init__.py  __main__.py  cudnn.py  discovery.py  inputs.py  protocol.py
python/tests/: conftest.py
python/tests/inferio/impl/: test_inference_models_integration.py
python/tests/inferio_worker/: test_worker_protocol.py
python/tests/inferio_worker/fixture_impls/: badbytes_impl.py  batchsize_impl.py  broken_impl.py  device_impl.py  (+7 more)
(+487 files in other folders)
