[tool.poetry]
name = "panoptikon"
version = "1.0.0"
description = "AI-based media indexing, tagging, and semantic search engine for local files"
authors = ["reasv"]
license = "AGPL"
readme = "README.md"
packages = [
    { include = "panoptikon", from = "src" },
    { include = "inferio", from = "src" },
    { include = "searchui", from = "src" },
]
include = [
    "src/panoptikon/ui/static/**/*",
    "src/panoptikon/api/templates/**/*",
    "src/inferio/config/**/*",
]

[tool.poetry.dependencies]
python = "^3.12"
pillow = "^10.4.0"
imageio-ffmpeg = { extras = ["ffmpeg"], version = "^0.5.1" }
python-dotenv = "^1.0.1"
sqlite-vec = "^0.1.1"
fastapi-utilities = "^0.2.0"
mutagen = "^1.47.0"
toml = "^0.10.2"
weasyprint = "^62.3"
pypdfium2 = "^4.30.0"
alembic = "^1.13.2"
fastapi-proxy-lib = "^0.1.0"
nodejs-wheel = "^20.17.0"
sqlalchemy = "^2.0.34"
tomlkit = "^0.13.2"
uvicorn = "^0.32.0"
python-multipart = "^0.0.12"
tomli = "^2.0.2"
tomli-w = "^1.0.0"
blurhash = "^1.1.4"
aiohttp = "^3.11.0"
more-itertools = "^10.5.0"
pandas = "^2.2.3"

[tool.poetry.group.inference]
optional = true

[tool.poetry.group.inference.dependencies]
open-clip-torch = "^2.26.1"
python-doctr = { extras = ["torch"], version = "^0.8.1" }
timm = "^1.0.7"
faster-whisper = { git = "https://github.com/SYSTRAN/faster-whisper.git" }
sentence-transformers = "^3.0.1"

[tool.poetry.scripts]
panoptikon = "panoptikon.__main__:launch_app"
inferio = "inferio.__main__:launch_app"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80
