[project]
name = "panoptikon"
version = "1.0.0"
description = "AI-based media indexing, tagging, and semantic search engine for local files"
authors = [{ name = "reasv" }]
requires-python = "~=3.12"
readme = "README.md"
license = "AGPL-3.0-or-later"
dependencies = [
    "pillow>=10.4.0,<11",
    "python-dotenv>=1.0.1,<2",
    "sqlite-vec>=0.1.6,<0.2",
    "fastapi-utilities>=0.2.0,<0.3",
    "mutagen>=1.47.0,<2",
    "toml>=0.10.2,<0.11",
    "weasyprint~=62.3",
    "pypdfium2>=4.30.0,<5",
    "alembic>=1.13.2,<2",
    "fastapi-proxy-lib>=0.1.0,<0.2",
    "nodejs-wheel>=20.17.0,<21",
    "sqlalchemy>=2.0.34,<3",
    "tomlkit>=0.13.2,<0.14",
    "uvicorn>=0.32.0,<0.33",
    "python-multipart>=0.0.12,<0.0.13",
    "tomli>=2.0.2,<3",
    "tomli-w>=1.0.0,<2",
    "blurhash>=1.1.4,<2",
    "aiohttp>=3.11.0,<4",
    "more-itertools>=10.5.0,<11",
    "pandas>=2.2.3,<3",
    "httpx>=0.27.2,<0.28",
    "static-ffmpeg>=2.13",
    "psutil>=7.0.0",
    "ray[serve]>=2.47.1",
]

[project.scripts]
panoptikon = "panoptikon.__main__:launch_app"
inferio = "inferio.__main__:launch_app"

[dependency-groups]
inference = [
    "open-clip-torch>=2.26.1,<3",
    "python-doctr[torch]>=0.10.0,<0.11",
    "timm>=1.0.7,<2",
    "faster-whisper>=1.1.1,<2",
    "sentence-transformers>=3.0.1,<4",
    "transformers>=4.49.0,<5",
    "pyvips-binary>=8.16.1,<9",
    "pyvips>=2.2.3,<3",
    "easyocr>=1.7.2,<2",
    "einops>=0.8.1",
]

[tool.uv]
default-groups = ["inference"]

[tool.hatch.build.targets.sdist]
include = [
    "src/panoptikon",
    "src/inferio",
    "src/searchui",
    "src/panoptikon/ui/static/**/*",
    "src/panoptikon/api/templates/**/*",
    "src/inferio/config/**/*",
]

[tool.hatch.build.targets.wheel]
include = [
    "src/panoptikon",
    "src/inferio",
    "src/searchui",
    "src/panoptikon/ui/static/**/*",
    "src/panoptikon/api/templates/**/*",
    "src/inferio/config/**/*",
]

[tool.hatch.build.targets.wheel.sources]
"src/panoptikon" = "panoptikon"
"src/inferio" = "inferio"
"src/searchui" = "searchui"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 80
