[package]
name = "gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1.39", features = [
    "rt-multi-thread",
    "macros",
    "process",
] }
hyper = { version = "1", features = ["http1", "http2", "client"] }
hyper-util = { version = "0.1", features = ["client-legacy", "http1", "http2", "tokio"] }
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }
anyhow = "1"
config = "0.14"
url = "2"
clap = { version = "4", features = ["derive"] }
