[package]
name = "gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1.39", features = [
    "rt-multi-thread",
    "macros",
    "process",
] }
hyper = { version = "1", features = ["http1", "http2", "client"] }
hyper-util = { version = "0.1", features = [
    "client-legacy",
    "http1",
    "http2",
    "tokio",
] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
walkdir = "2"
mime_guess = "2"
md-5 = "0.10"
image = { version = "0.25", default-features = true }
time = { version = "0.3", features = ["formatting", "local-offset"] }
sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "sqlite",
    "migrate",
    "macros",
] }
anyhow = "1"
config = "0.14"
url = "2"
clap = { version = "4", features = ["derive"] }
http-body-util = "0.1"
sha2 = "0.10"
tower = "0.5"
tokio-util = { version = "0.7", features = ["io"] }
httpdate = "1"
axum-extra = { version = "0.12.5", features = ["query"] }
sqlite-vec = "0.1.7-alpha.2"
libsqlite3-sys = "0.27"
base64 = "0.22"
dotenvy = "0.15"
ractor = "0.15"
blurhash = "0.2.3"

[dev-dependencies]
tempfile = "3"
