[package]
name = "gateway"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"

[dependencies]
axum = "0.8"
tokio = { version = "1.39", features = [
    "rt-multi-thread",
    "macros",
    "process",
    "fs",
    "signal",
] }
hyper = { version = "1", features = ["http1", "http2", "client"] }
hyper-util = { version = "0.1", features = [
    "client-legacy",
    "http1",
    "http2",
    "tokio",
] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
walkdir = "2"
mime_guess = "2"
md-5 = "0.10"
image = { version = "0.25", default-features = true }
notify = "8.2.0"
time = { version = "0.3", features = ["formatting", "local-offset"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "sqlite",
    "migrate",
    "macros",
] }
anyhow = "1"
config = "0.14"
url = "2"
clap = { version = "4", features = ["derive"] }
http-body-util = "0.1"
sha2 = "0.10"
tower = "0.5"
tokio-util = { version = "0.7", features = ["io"] }
httpdate = "1"
axum-extra = { version = "0.12.5", features = ["query"] }
sqlite-vec = "0.1.7-alpha.2"
libsqlite3-sys = "0.28"
base64 = "0.22"
dotenvy = "0.15"
ractor = "0.15"
blurhash = "0.2.3"
hashlink = "0.10"
sea-query = { version = "=1.0.0-rc.30", features = ["sqlx-utils"] }
sea-query-sqlx = { version = "=0.8.0-rc.14", features = [
    "sqlx-sqlite",
    "with-chrono",
    "with-json",
    "with-uuid",
    "with-time",
    "runtime-async-std-native-tls",
] }
shell-words = "1"
utoipa = "5.4"
utoipa-swagger-ui = { version = "9", features = ["axum", "vendored"] }
utoipa-redoc = { version = "6", features = ["axum"] }
reqwest = { version = "0.12", features = ["json", "multipart"] }
reqwest-middleware = { version = "0.3", features = ["multipart"] }
reqwest-retry = "0.5"
futures-util = "0.3"
lofty = "0.22"
imageproc = "0.25"
ab_glyph = "0.2"
# `sync` adds Send+Sync on `Pdfium` so the binding can live in a static shared
# by spawn_blocking workers. NOTE: this does NOT make pdfium calls thread-safe
# (the feature's mutex only guards library init/destroy) — all FFI use is
# serialized through PDFIUM_CALL_LOCK in jobs/files.rs. `pdfium_6721` selects
# the FPDF_* API set: symbols are resolved eagerly, so this must not exceed
# the oldest pdfium build we want to load — 6721 covers the pypdfium2-bundled
# library (build 6899) and anything newer.
pdfium-render = { version = "0.8", default-features = false, features = [
    "sync",
    "image_025",
    "pdfium_6721",
] }
croner = "3.0.1"
chrono = "0.4.45"

[target.'cfg(windows)'.dependencies]
# Job objects: kill the whole headless-browser process tree when a render
# ends, including the detached browser the msedge.exe launcher leaves behind.
windows-sys = { version = "0.60", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_JobObjects",
] }

[dev-dependencies]
tempfile = "3"
