[package]
name = "panoptikon-config"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
description = "Lossless, atomic editors for Panoptikon file-based configuration"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
toml_edit = "0.22"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.60", features = ["Win32_Storage_FileSystem"] }

[dev-dependencies]
tempfile = "3"
