[package]
name = "panoptikon"
version = "0.1.7"
edition = "2024"
license = "AGPL-3.0-or-later"

[features]
# Self-contained releases (docs/architecture.md): embed the default configs
# (the canonical config/server/default.toml, config/inference/example.toml) and the
# Python source set (python/inferio_worker, python/inferio, pyproject.toml,
# uv.lock — no tests, no .venv) into the binary; first run materializes
# them (config dump if absent, extraction to runtime/pysrc/<version>).
# Plain builds (no features) read the source tree exactly as before.
bundled = []
# Additive: embed a Next.js standalone UI bundle from the build-time env var
# PANOPTIKON_UI_BUNDLE (a compile error names the variable when it is unset
# or invalid). Extracted to runtime/ui/<version> and run as `node server.js`
# when [upstreams.ui] local = true and the configured checkout is absent.
bundled-ui = []

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1.39", features = [
    "rt-multi-thread",
    "macros",
    "process",
    "fs",
    "io-util",
    "io-std",
    "signal",
] }
fs2 = "0.4"
hyper = { version = "1", features = ["http1", "http2", "client"] }
hyper-util = { version = "0.1", features = [
    "client-legacy",
    "http1",
    "http2",
    "tokio",
] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
serde = { version = "1", features = ["derive"] }
# preserve_order (serde_json + toml): Python dicts preserve insertion order
# and the web UI renders model tabs/rows in JSON key order, so map ordering
# is semantic — inference registry TOML order must survive to /metadata.
serde_json = { version = "1", features = ["preserve_order"] }
toml = { version = "0.8", features = ["preserve_order"] }
# Insertion-ordered maps for the inference registry (groups/inference_ids).
indexmap = "2"
walkdir = "2"
mime_guess = "2"
md-5 = "0.10"
image = { version = "0.25", default-features = true }
notify = "8.2.0"
time = { version = "0.3", features = ["formatting", "local-offset"] }
sqlx = { version = "0.9", features = [
    "runtime-tokio",
    "sqlite",
    "migrate",
    "macros",
] }
anyhow = "1"
panoptikon-config = { path = "../panoptikon-config" }
config = "0.14"
url = "2"
clap = { version = "4", features = ["derive"] }
http-body-util = "0.1"
sha2 = "0.10"
# Policy tokens (policy_token.rs): HMAC-SHA256 mint/verify for the SSR policy
# header; hmac's verify_slice is the constant-time comparison. hex encodes
# tags and decodes the configured key; rand generates the per-boot key. All
# three were already in the dependency tree transitively.
hmac = "0.12"
hex = "0.4"
rand = "0.9"
uuid = { version = "1", features = ["serde", "v4"] }
tower = "0.5"
tokio-util = { version = "0.7", features = ["io"] }
httpdate = "1"
axum-extra = { version = "0.12.5", features = ["query"] }
sqlite-vec = "0.1.9"
# sqlx 0.9 accepts libsqlite3-sys up to <0.38; 0.37 bundles SQLite 3.5x
# (up from 3.45.x on the old 0.28 pin).
libsqlite3-sys = "0.37"
base64 = "0.22"
tempfile = "3"
ractor = "0.15"
blurhash = "0.2.3"
hashlink = "0.10"
sea-query = { version = "1.0", features = ["sqlx-utils"] }
sea-query-sqlx = { version = "0.9", features = [
    "sqlx-sqlite",
    "with-chrono",
    "with-json",
    "with-uuid",
    "with-time",
    "runtime-tokio",
] }
shell-words = "1"
utoipa = "5.4"
utoipa-swagger-ui = { version = "9", features = ["axum", "vendored"] }
utoipa-redoc = { version = "6", features = ["axum"] }
# `stream`: setup.rs streams the pinned uv download to disk with progress.
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
reqwest-middleware = { version = "0.3", features = ["multipart"] }
reqwest-retry = "0.5"
futures-util = "0.3"
lofty = "0.22"
imageproc = "0.25"
ab_glyph = "0.2"
# `sync` adds Send+Sync on `Pdfium` so the binding can live in a static shared
# by spawn_blocking workers. NOTE: this does NOT make pdfium calls thread-safe
# (the feature's mutex only guards library init/destroy) — all FFI use is
# serialized through PDFIUM_CALL_LOCK in jobs/files.rs. `pdfium_6721` selects
# the FPDF_* API set: symbols are resolved eagerly, so this must not exceed
# the oldest pdfium build we want to load — 6721 covers the pypdfium2-bundled
# library (build 6899) and anything newer.
pdfium-render = { version = "0.8", default-features = false, features = [
    "sync",
    "image_025",
    "pdfium_6721",
] }
croner = "3.0.1"
chrono = "0.4.45"
# Dynamic msgpack values for the inferio worker protocol (framed stdio):
# rmpv keeps str vs bin distinct, which the protocol relies on.
rmpv = "1"
# tar.gz handling: extraction of the pinned uv standalone build on Unix
# (setup.rs) and of the embedded resource archives on every platform
# (resources.rs, `bundled`/`bundled-ui` features).
flate2 = "1"
tar = "0.4"

[target.'cfg(unix)'.dependencies]
# PR_SET_PDEATHSIG + process-group SIGKILL: the Unix counterpart of the
# Windows job objects for reaping worker/UI trees when the gateway dies.
libc = "0.2"

[target.'cfg(windows)'.dependencies]
# Job objects: kill the whole headless-browser process tree when a render
# ends, including the detached browser the msedge.exe launcher leaves behind.
# Threading: process-creation flags detaching the UI node children from the
# console signal path (CREATE_NEW_PROCESS_GROUP | CREATE_NO_WINDOW).
# Win32_Storage_FileSystem + Win32_System_IO: LockFileEx for the advisory
# lock serializing concurrent setup runs (setup.rs).
windows-sys = { version = "0.60", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
] }
# Extraction of the pinned uv standalone build (setup.rs): zip on Windows.
zip = { version = "2", default-features = false, features = ["deflate"] }

[dev-dependencies]

[build-dependencies]
# build.rs packages the embedded resource archives (`bundled`/`bundled-ui`);
# with neither feature enabled it only declares cfg/rerun directives.
flate2 = "1"
tar = "0.4"
